fixing some bugs, still some bugs remaining

--- a/SinglePhotonInterferenceInterface.ipynb
+++ b/SinglePhotonInterferenceInterface.ipynb
@@ -277,13 +277,12 @@
     "# Initialize the data lists, time is the same for all three plots\n",
     "# use a Column Data Source, intially all lists are empty\n",
     "\n",
-    "source = ColumnDataSource(dict(\n",
-    "    timeList=[],\n",
-    "    voltageList = [],\n",
-    "    singleCountsA=[], \n",
-    "    singleCountsB=[], \n",
-    "    coincidenceCountsAB=[]\n",
-    "    ))\n",
+    "source = ColumnDataSource(dict(timeList=[],\n",
+    "                               voltageList = [],\n",
+    "                               singleCountsA=[], \n",
+    "                               singleCountsB=[], \n",
+    "                               coincidenceCountsAB=[]\n",
+    "                              ))\n",
     "\n",
     "\n",
     "\n",
@@ -426,6 +425,9 @@
     "voltageRange = 0\n",
     "voltageStep = 0\n",
     "\n",
+    "# Define a variable callback_id, which is attached to the periodic_callback function\n",
+    "callback_id = None\n",
+    "\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
@@ -435,22 +437,17 @@
     "    global totalNumberDataPoints\n",
     "    \n",
     "    \n",
-    "    # don't add data if total number of data points has been reached\n",
-    "    if numberDataPoints == totalNumberDataPoints:\n",
-    "        \n",
-    "        # remove callback\n",
-    "        global callback_id\n",
-    "        curdoc().remove_periodic_callback(callback_id)\n",
-    "    \n",
-    "    # else add new data\n",
-    "    else:\n",
-    "    \n",
+    "    # add data if total number of data points has not yet been reached\n",
+    "    if numberDataPoints < totalNumberDataPoints:\n",
+    "            \n",
     "        # use the global variable\n",
     "        global countingTime\n",
     "        global voltageRange\n",
     "        global voltageStep\n",
     "        global runningTime\n",
     "        global outputVoltage\n",
+    "        \n",
+    "        #countingTime = countingTimeSlider.value\n",
     "\n",
     "        # add the counting time to our running time\n",
     "        runningTime = runningTime + countingTime\n",
@@ -473,7 +470,11 @@
     "        # Request data from the CD48 counter\n",
     "        s.write(\"c\\n\".encode())\n",
     "        serialData = s.readline()\n",
-    "        counterData = [int(float(x)) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
+    "        counterData = serialData.decode('ascii').rstrip().split(' ')\n",
+    "        for i in np.arange(len(counterData)):\n",
+    "            if counterData[i].isdigit() == True:\n",
+    "                counterData[i] = int(counterData[i])\n",
+    "        #counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
     "\n",
     "        # append one new data point to each list\n",
     "        new_data = dict(\n",
@@ -493,13 +494,19 @@
     "        # increase the desired output voltage by the voltage step\n",
     "        outputVoltage = outputVoltage + voltageStep\n",
     "    \n",
+    "    # else don't add new data\n",
+    "    else:\n",
+    "        \n",
+    "        # remove callback\n",
+    "        global callback_id\n",
+    "        curdoc().remove_periodic_callback(callback_id)\n",
     "    \n",
     "    \n",
+    "    \n",
     "\n",
     "\n",
     "\n",
-    "# Define a variable callback_id, which is attached to the periodic_callback function\n",
-    "callback_id = None\n",
+    "\n",
     "\n",
     "'''\n",
     "# Define a function to be called when the START/STOP button changes value\n",
@@ -552,6 +559,10 @@
     "    outputVoltage = 0\n",
     "    \n",
     "    runningTime = 0\n",
+    "    \n",
+    "    # make a count to clear counters\n",
+    "    s.write(\"c\\n\".encode())\n",
+    "    serialData = s.readline()\n",
     "    \n",
     "    callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
     "    \n",
