fixed time "jump" bug

--- a/SinglePhotonInterferenceInterface.ipynb
+++ b/SinglePhotonInterferenceInterface.ipynb
@@ -461,6 +461,7 @@
     "        voltageCommand = \"V\" + str(boardOutputVoltage) + \"\\n\"\n",
     "        \n",
     "        s.write(voltageCommand.encode())\n",
+    "        voltRead = s.readline()\n",
     "        \n",
     "        # the true output voltage is slightly different from desired output voltage due to rounding\n",
     "        # it is based on the number command sent to board\n",
@@ -470,11 +471,7 @@
     "        # Request data from the CD48 counter\n",
     "        s.write(\"c\\n\".encode())\n",
     "        serialData = s.readline()\n",
-    "        counterData = serialData.decode('ascii').rstrip().split(' ')\n",
-    "        for i in np.arange(len(counterData)):\n",
-    "            if counterData[i].isdigit() == True:\n",
-    "                counterData[i] = int(counterData[i])\n",
-    "        #counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
+    "        counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
     "\n",
     "        # append one new data point to each list\n",
     "        new_data = dict(\n",
