--- a/SinglePhotonInterferenceInterface.ipynb
+++ b/SinglePhotonInterferenceInterface.ipynb
@@ -315,6 +315,21 @@
     "# Set up the save datda button, to export the data to a csv file\n",
     "saveDataButton = Button(label=\"Save Data\")\n",
     "\n",
+    "AHover = [\n",
+    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"Counts: \", \"@singleCountsA\")\n",
+    "]\n",
+    "\n",
+    "BHover = [\n",
+    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"Counts: \", \"@singleCountsB\")\n",
+    "]\n",
+    "\n",
+    "ABHover = [\n",
+    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"Counts: \", \"@coincidenceCountsAB\")\n",
+    "]\n",
+    "\n",
     "\n",
     "# Create our 4 plots\n",
     "\n",
@@ -322,13 +337,13 @@
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange))\n",
     "\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange))\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = AHover)\n",
     "\n",
     "singleCountsBPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange))\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = BHover)\n",
     "\n",
     "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange))\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = ABHover)\n",
     "\n",
     "# Set y-axis labels for graphs\n",
     "singleCountsAPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
@@ -357,6 +372,9 @@
     "#coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Make each point of each plot a circle\n",
     "\n",
     "coincidenceCountsvsVPlot.circle(x = 'voltageList', y = 'coincidenceCountsAB', \n",
@@ -366,21 +384,21 @@
     "                         y = 'singleCountsA', \n",
     "                         source = source, \n",
     "                         line_width=3, \n",
-    "                         line_alpha=0.6,\n",
+    "                         line_alpha=0.6\n",
     "                         )\n",
     "\n",
     "singleCountsBPlot.circle(x = 'voltageList', \n",
     "                         y = 'singleCountsB', \n",
     "                         source = source, \n",
     "                         line_width=3, \n",
-    "                         line_alpha=0.6,\n",
+    "                         line_alpha=0.6\n",
     "                         )\n",
     "\n",
     "coincidenceCountsABPlot.circle(x = 'voltageList', \n",
     "                               y = 'coincidenceCountsAB', \n",
     "                               source = source, \n",
     "                               line_width=3, \n",
-    "                               line_alpha=0.6,\n",
+    "                               line_alpha=0.6\n",
     "                               )\n",
     "\n",
     "# Connect the points of each plot with a line\n",
@@ -407,7 +425,6 @@
     "                             line_width=2, \n",
     "                             line_alpha=0.6\n",
     "                            )\n",
-    "\n",
     "\n",
     "\n",
     "# set global variables to 0\n",
@@ -691,6 +708,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -713,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
