added ratio of counts and accidental coincidences

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -287,11 +287,13 @@
     "    timeList=[], \n",
     "    singleCountsA=[], \n",
     "    singleCountsB=[], \n",
-    "    coincidenceCountsAB=[]\n",
+    "    coincidenceCountsAB=[],\n",
+    "    ratioCounts = [],\n",
+    "    accidentalCoincidences = []\n",
     "    ))\n",
     "\n",
     "\n",
-    "# Create our 3 plots\n",
+    "# Create our 4 plots\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
@@ -299,6 +301,9 @@
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
     "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
+    "\n",
+    "ratioCountsPlot = figure(plot_height=200, plot_width=600, title=\"Ratio of Coincidences to Total Counts\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
     "\n",
     "\n",
@@ -321,6 +326,9 @@
     "coincidenceCountsABPlot.x_range.follow = \"end\"\n",
     "coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
     "\n",
+    "ratioCountsPlot.x_range.follow = \"end\"\n",
+    "ratioCountsPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
     "\n",
     "\n",
     "# Make each point of each plot a circle\n",
@@ -328,12 +336,18 @@
     "singleCountsBPlot.circle(x = 'timeList', y = 'singleCountsB', source = source, line_width=3, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.circle(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
     "                               line_width=3, line_alpha=0.6)\n",
+    "coincidenceCountsABPlot.circle(x = 'timeList', y = 'accidentalCoincidences', source = source, \n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'red')\n",
+    "ratioCountsPlot.circle(x = 'timeList', y = 'ratioCounts', source = source, line_width=3, line_alpha=0.6)\n",
     "\n",
     "# Connect the points of each plot with a line\n",
     "singleCountsAPlot.line(x = 'timeList', y = 'singleCountsA', source = source, line_width=2, line_alpha=0.6)\n",
     "singleCountsBPlot.line(x = 'timeList', y = 'singleCountsB', source = source, line_width=2, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.line(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
     "                               line_width=2, line_alpha=0.6)\n",
+    "coincidenceCountsABPlot.line(x = 'timeList', y = 'accidentalCoincidences', source = source, \n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'red')\n",
+    "ratioCountsPlot.line(x = 'timeList', y = 'ratioCounts', source = source, line_width=2, line_alpha=0.6)\n",
     "\n",
     "\n",
     "# Set up START/STOP button, to start and stop counting\n",
@@ -376,25 +390,24 @@
     "    \n",
     "    \n",
     "    \n",
-    "    if useSerial:\n",
-    "        # Request data from the CD48 counter\n",
-    "        s.write(\"c\\n\".encode())\n",
-    "        serialData = s.readline()\n",
-    "        counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
-    "        \n",
-    "        new_data = dict(\n",
-    "            timeList=[runningTime],\n",
-    "            singleCountsA=[counterData[0]],\n",
-    "            singleCountsB=[counterData[1]],\n",
-    "            coincidenceCountsAB=[counterData[2]]\n",
-    "        )\n",
+    "    s.write(\"c\\n\".encode())\n",
+    "    serialData = s.readline()\n",
+    "    counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
+    "      \n",
+    "    if counterData[0] + counterData[1] > 0:\n",
+    "        ratio = counterData[2]/(counterData[0] + counterData[1])\n",
     "    else:\n",
-    "        # append new data (the current time for timeList and random values for all others)\n",
-    "        new_data = dict(\n",
-    "            timeList=[runningTime],\n",
-    "            singleCountsA=[np.random.randint(0, countingTime)],\n",
-    "            singleCountsB=[np.random.randint(0, countingTime)],\n",
-    "            coincidenceCountsAB=[np.random.randint(0, countingTime)]\n",
+    "        ratio = 0\n",
+    "        \n",
+    "    calculatedAccidental = (counterData[0]*counterData[1]*25*(10**(-9)))/(countingTime)\n",
+    "        \n",
+    "    new_data = dict(\n",
+    "        timeList=[runningTime],\n",
+    "        singleCountsA=[counterData[0]],\n",
+    "        singleCountsB=[counterData[1]],\n",
+    "        coincidenceCountsAB=[counterData[2]],\n",
+    "        ratioCounts=[ratio],\n",
+    "        accidentalCoincidences=[calculatedAccidental]\n",
     "        )\n",
     "    \n",
     "    # Stream the new data to the plots.\n",
@@ -514,9 +527,10 @@
     "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
     "\n",
     "# create a column with our three plots\n",
-    "plotsColumn = column([singleCountsAPlot, \n",
-    "                      singleCountsBPlot, \n",
-    "                      coincidenceCountsABPlot\n",
+    "plotsColumn = column([coincidenceCountsABPlot,\n",
+    "                      ratioCountsPlot,\n",
+    "                      singleCountsAPlot, \n",
+    "                      singleCountsBPlot  \n",
     "                     ])\n",
     "\n",
     "# create a layout for the graphs interface, with the input widgets and the three plots\n",
@@ -531,7 +545,7 @@
     "                         title=\"Graphs\")\n",
     "\n",
     "# combine all tabs into one layout\n",
-    "currentDocumentTabs = Tabs(tabs=[ setCountersTab, displayCountsTab ])\n",
+    "currentDocumentTabs = Tabs(tabs=[ displayCountsTab, setCountersTab ])\n",
     "\n",
     "\n",
     "# Add tabs to current document\n",
@@ -564,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
