changed widget/plot sizes, updated graph x-axis scaling

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -289,26 +289,51 @@
     "    singleCountsB=[], \n",
     "    coincidenceCountsAB=[],\n",
     "    ratioCounts = [],\n",
+    "    totalCoincidences = [],\n",
     "    accidentalCoincidences = []\n",
     "    ))\n",
     "\n",
+    "# Add Hover Tools\n",
+    "AHover = [\n",
+    "    (\"Time\", \"@timeList\"),\n",
+    "    (\"Counts\", \"@singleCountsA\")\n",
+    "]\n",
+    "\n",
+    "BHover = [\n",
+    "    (\"Time\", \"@timeList\"),\n",
+    "    (\"Counts\", \"@singleCountsB\")\n",
+    "]\n",
+    "\n",
+    "ABHover = [\n",
+    "    (\"Time\", \"@timeList\"),\n",
+    "    (\"Adjusted Counts\", \"@coincidenceCountsAB\"),\n",
+    "    (\"Total Counts\", \"@totalCoincidences\"),\n",
+    "    (\"Accidental Counts\", \"@accidentalCoincidences\")\n",
+    "]\n",
+    "\n",
+    "RatioHover = [\n",
+    "    (\"Time\", \"@timeList\"),\n",
+    "    (\"Ratio\", \"@ratioCounts\")\n",
+    "]\n",
+    "\n",
     "\n",
     "# Create our 4 plots\n",
-    "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
+    "singleCountsAPlot = figure(plot_height=350, plot_width=700, title=\"Single Counts on Port A\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = AHover)\n",
     "\n",
-    "singleCountsBPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
+    "singleCountsBPlot = figure(plot_height=350, plot_width=700, title=\"Single Counts on Port B\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = BHover)\n",
     "\n",
-    "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
+    "coincidenceCountsABPlot = figure(plot_height=350, plot_width=700, \n",
+    "                                 title=\"Coincidence Counts (- Calculated Accidental Counts)\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = ABHover)\n",
     "\n",
-    "ratioCountsPlot = figure(plot_height=200, plot_width=600, title=\"Ratio of Coincidences to Total Counts\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\")\n",
+    "ratioCountsPlot = figure(plot_height=350, plot_width=700, title=\"Ratio of Coincidences to Total Counts\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = RatioHover)\n",
     "\n",
     "\n",
     "# Set up slider for user to choose counting time (100ms to 1000ms)\n",
-    "countingTimeSlider = Slider(start=100, end=1000, value=1000, step=10, title=\"Counting Time (ms)\")\n",
+    "countingTimeSlider = Slider(start=0.1, end=5, value=1, step=0.1, title=\"Counting Time (s)\", width = 150)\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
     "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
@@ -332,40 +357,46 @@
     "\n",
     "\n",
     "# Make each point of each plot a circle\n",
-    "singleCountsAPlot.circle(x = 'timeList', y = 'singleCountsA', source = source, line_width=3, line_alpha=0.6)\n",
-    "singleCountsBPlot.circle(x = 'timeList', y = 'singleCountsB', source = source, line_width=3, line_alpha=0.6)\n",
+    "singleCountsAPlot.circle(x = 'timeList', y = 'singleCountsA', source = source, line_width=6, line_alpha=0.6)\n",
+    "singleCountsBPlot.circle(x = 'timeList', y = 'singleCountsB', source = source, line_width=6, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.circle(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
-    "                               line_width=3, line_alpha=0.6)\n",
-    "coincidenceCountsABPlot.circle(x = 'timeList', y = 'accidentalCoincidences', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'red')\n",
-    "ratioCountsPlot.circle(x = 'timeList', y = 'ratioCounts', source = source, line_width=3, line_alpha=0.6)\n",
+    "                               line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "ratioCountsPlot.circle(x = 'timeList', y = 'ratioCounts', source = source, line_width=6, line_alpha=0.6,\n",
+    "                      line_color = 'green')\n",
     "\n",
     "# Connect the points of each plot with a line\n",
-    "singleCountsAPlot.line(x = 'timeList', y = 'singleCountsA', source = source, line_width=2, line_alpha=0.6)\n",
-    "singleCountsBPlot.line(x = 'timeList', y = 'singleCountsB', source = source, line_width=2, line_alpha=0.6)\n",
+    "singleCountsAPlot.line(x = 'timeList', y = 'singleCountsA', source = source, line_width=3, line_alpha=0.6)\n",
+    "singleCountsBPlot.line(x = 'timeList', y = 'singleCountsB', source = source, line_width=3, line_alpha=0.6)\n",
     "coincidenceCountsABPlot.line(x = 'timeList', y = 'coincidenceCountsAB', source = source, \n",
-    "                               line_width=2, line_alpha=0.6)\n",
-    "coincidenceCountsABPlot.line(x = 'timeList', y = 'accidentalCoincidences', source = source, \n",
-    "                               line_width=3, line_alpha=0.6, line_color = 'red')\n",
-    "ratioCountsPlot.line(x = 'timeList', y = 'ratioCounts', source = source, line_width=2, line_alpha=0.6)\n",
+    "                               line_width=3, line_alpha=0.6, line_color = 'orange')\n",
+    "ratioCountsPlot.line(x = 'timeList', y = 'ratioCounts', source = source, line_width=3, line_alpha=0.6,\n",
+    "                     line_color = 'green')\n",
     "\n",
+    "\n",
+    "# Set y-axis labels for graphs\n",
+    "singleCountsAPlot.yaxis.axis_label = \"Counts\"\n",
+    "singleCountsBPlot.yaxis.axis_label = \"Counts\"\n",
+    "coincidenceCountsABPlot.yaxis.axis_label = \"Counts\"\n",
+    "ratioCountsPlot.yaxis.axis_label = \"Ratio\"\n",
+    "\n",
+    "\n",
+    "# Set x-axis labels for graphs\n",
+    "singleCountsAPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "singleCountsBPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "coincidenceCountsABPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "ratioCountsPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "# Set up START/STOP button, to start and stop counting\n",
-    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1)\n",
+    "startStopButtonGroup = RadioButtonGroup(labels=[\"START\", \"STOP\"], active=1, width = 150)\n",
     "\n",
     "# Set up the reset button, to clear the graph of all data\n",
-    "resetGraphButton = Button(label=\"Reset\")\n",
+    "resetGraphButton = Button(label=\"Reset\", width = 150)\n",
     "\n",
     "# Set up the save datda button, to export the data to a csv file\n",
-    "saveDataButton = Button(label=\"Save Data\")\n",
+    "saveDataButton = Button(label=\"Save Data\", width = 150)\n",
     "\n",
     "\n",
     "\n",
-    "# Set up time average value text box\n",
-    "#averageValueText = []\n",
-    "\n",
-    "#for i in np.arange(3):\n",
-    "#    averageValueText.append(Paragraph(text=\"Plot \" + str(i) + \" Average: 0\", width=400, height=40))\n",
     "\n",
     "    \n",
     "\n",
@@ -393,21 +424,24 @@
     "    s.write(\"c\\n\".encode())\n",
     "    serialData = s.readline()\n",
     "    counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
-    "      \n",
+    "    \n",
+    "    calculatedAccidental = (counterData[0]*counterData[1]*25*(10**(-9)))/(countingTime)\n",
+    "                                                                       \n",
+    "    adjustedCoincidenceCounts = counterData[2] - calculatedAccidental\n",
+    "    \n",
     "    if counterData[0] + counterData[1] > 0:\n",
-    "        ratio = counterData[2]/(counterData[0] + counterData[1])\n",
+    "        ratio = adjustedCoincidenceCounts/(counterData[0] + counterData[1])\n",
     "    else:\n",
     "        ratio = 0\n",
-    "        \n",
-    "    calculatedAccidental = (counterData[0]*counterData[1]*25*(10**(-9)))/(countingTime)\n",
     "        \n",
     "    new_data = dict(\n",
     "        timeList=[runningTime],\n",
     "        singleCountsA=[counterData[0]],\n",
     "        singleCountsB=[counterData[1]],\n",
-    "        coincidenceCountsAB=[counterData[2]],\n",
+    "        coincidenceCountsAB=[adjustedCoincidenceCounts],\n",
     "        ratioCounts=[ratio],\n",
-    "        accidentalCoincidences=[calculatedAccidental]\n",
+    "        totalCoincidences = [counterData[2]],\n",
+    "        accidentalCoincidences = [calculatedAccidental]\n",
     "        )\n",
     "    \n",
     "    # Stream the new data to the plots.\n",
@@ -457,7 +491,7 @@
     "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
     "        #global countingTime\n",
     "        countingTime = countingTimeSlider.value\n",
-    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime)\n",
+    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
     "    \n",
     "    # else if the STOP button is on\n",
     "    elif startStopButtonGroup.active == 1:\n",
@@ -490,7 +524,26 @@
     "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
     "        #global countingTime\n",
     "        countingTime = countingTimeSlider.value\n",
-    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime)\n",
+    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
+    "        \n",
+    "    # How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
+    "    numberPointsDisplayed = 20\n",
+    "\n",
+    "\n",
+    "    # Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
+    "    # This way, the graph will scroll to show the newest points\n",
+    "    singleCountsAPlot.x_range.follow = \"end\"\n",
+    "    singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
+    "    singleCountsBPlot.x_range.follow = \"end\"\n",
+    "    singleCountsBPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
+    "    coincidenceCountsABPlot.x_range.follow = \"end\"\n",
+    "    coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
+    "    ratioCountsPlot.x_range.follow = \"end\"\n",
+    "    ratioCountsPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
+    "\n",
     "        \n",
     "        \n",
     "    \n",
@@ -527,14 +580,16 @@
     "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
     "\n",
     "# create a column with our three plots\n",
-    "plotsColumn = column([coincidenceCountsABPlot,\n",
-    "                      ratioCountsPlot,\n",
-    "                      singleCountsAPlot, \n",
-    "                      singleCountsBPlot  \n",
+    "plotsColumn1 = column([coincidenceCountsABPlot,\n",
+    "                      ratioCountsPlot \n",
+    "                     ])\n",
+    "\n",
+    "plotsColumn2 = column([singleCountsAPlot, \n",
+    "                       singleCountsBPlot  \n",
     "                     ])\n",
     "\n",
     "# create a layout for the graphs interface, with the input widgets and the three plots\n",
-    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn])]] , sizing_mode='scale_both')\n",
+    "displayCountsLayout = layout([[row([userInputWidgets, plotsColumn1, plotsColumn2])]] , sizing_mode='scale_both')\n",
     "\n",
     "# create a tab for the set counters interface\n",
     "setCountersTab = Panel(child = setCountersLayout, \n",
