Chaged the name of the curdoc

--- a/SinglePhotonInterferenceInterface.ipynb
+++ b/SinglePhotonInterferenceInterface.ipynb
@@ -703,7 +703,7 @@
     "# Add tabs to current document\n",
     "curdoc().add_root(currentDocumentTabs)\n",
     "\n",
-    "curdoc().title = \"Coincidence Counting Interface\""
+    "curdoc().title = \"SinglePhotonInterterenceInterface\""
    ]
   },
   {
