changed y-axis scaling on singlesA

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -19,6 +19,8 @@
     "\n",
     "from bokeh.driving import count\n",
     "\n",
+    "from bokeh.models import Range1d\n",
+    "\n",
     "import time\n",
     "import serial\n",
     "\n",
@@ -397,12 +399,15 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "sourceDataText = PreText(text=\"Source.data\", width = 500)\n",
     "    \n",
     "\n",
     "# keep a running count of time elapsed, start at 0. This will help inform x-axis values.\n",
     "runningTime = 0\n",
     "\n",
+    "# keep a count, add one each time update_data is called. \n",
+    "# use this to reset y-axis scaling periodically\n",
+    "resetYAxisCount = 0\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
@@ -411,7 +416,7 @@
     "    # retrieve the value of desired counting time\n",
     "    countingTime = countingTimeSlider.value\n",
     "    \n",
-    "\n",
+    "    global resetYAxisCount\n",
     "    \n",
     "    # use the global variable\n",
     "    global runningTime\n",
@@ -447,6 +452,67 @@
     "    # Stream the new data to the plots.\n",
     "    source.stream(new_data)\n",
     "    \n",
+    "    sourceDataString = ''\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    count = 0\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    for ele in reversed(source.data['singleCountsA']):\n",
+    "      \n",
+    "        sourceDataString = sourceDataString + ' ' + str(int(ele)) \n",
+    "        \n",
+    "        if count > 4:\n",
+    "            break\n",
+    "        \n",
+    "        count = count + 1\n",
+    "    '''\n",
+    "    '''\n",
+    "    sourceDataReverse = reversed(source.data['singleCountsA'])\n",
+    "    \n",
+    "    while count < 5:\n",
+    "        \n",
+    "        sourceDataString = sourceDataString + ' ' + str(sourceDataReverse[count])\n",
+    "        \n",
+    "        count = count + 1\n",
+    "    '''\n",
+    "    \n",
+    "    if resetYAxisCount % 5 == 0:\n",
+    "        \n",
+    "        #sourceDataText.text = ' '.join(map(str, max(source.data['singleCountsA'][-5:])))\n",
+    "        \n",
+    "        recentMaxA = max(source.data['singleCountsA'][-5:])\n",
+    "        \n",
+    "        sourceDataText.text = str(recentMaxA)\n",
+    "        \n",
+    "        #singleCountsAPlot.y_range.start = -10   \n",
+    "        #singleCountsAPlot.y_range.end = recentMaxA*1.1\n",
+    "        \n",
+    "        singleCountsAPlot.y_range.update(start = -10, end = recentMaxA*1.1)\n",
+    "        \n",
+    "        #if resetYAxisCount = 5:\n",
+    "         \n",
+    "            \n",
+    "    if resetYAxisCount == 3:\n",
+    "        \n",
+    "        singleCountsAPlot.y_range.update(start = -10, end = 3000)\n",
+    "    \n",
+    "    '''\n",
+    "    if resetYAxisCount > 5:\n",
+    "        \n",
+    "        if len(source.data['singleCountsA']) > 5:\n",
+    "            \n",
+    "            recentMaxA = max(source.data['singleCountsA'][-5:])\n",
+    "        \n",
+    "            singleCountsAPlot.y_range.end = recentMaxA*1.1\n",
+    "    '''    \n",
+    "    \n",
+    "    # add 1 to reset y-axis counter\n",
+    "    resetYAxisCount = resetYAxisCount + 1\n",
+    "    \n",
+    "    \n",
     "    '''\n",
     "    # Append the most recently received count to list n\n",
     "    if useSerial:\n",
@@ -472,7 +538,12 @@
     "    #averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
     "    \n",
     "    \n",
-    "    \n",
+    "#singleCountsAPlot.y_range.start = 0   \n",
+    "#singleCountsAPlot.y_range.end = 100\n",
+    "\n",
+    "\n",
+    "singleCountsAPlot.y_range = Range1d(0, 15)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -506,6 +577,9 @@
     "    # set the running time back to 0\n",
     "    global runningTime\n",
     "    runningTime = 0\n",
+    "    \n",
+    "    global resetYAxisCount\n",
+    "    resetYAxisCount = 0\n",
     "    \n",
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
@@ -581,7 +655,8 @@
     "\n",
     "# create a column with our three plots\n",
     "plotsColumn1 = column([coincidenceCountsABPlot,\n",
-    "                      ratioCountsPlot \n",
+    "                      ratioCountsPlot,\n",
+    "                      sourceDataText\n",
     "                     ])\n",
     "\n",
     "plotsColumn2 = column([singleCountsAPlot, \n",
