changed y-axis scaling for all counts plots

--- a/CoincidenceCountingInterface.ipynb
+++ b/CoincidenceCountingInterface.ipynb
@@ -398,8 +398,6 @@
     "saveDataButton = Button(label=\"Save Data\", width = 150)\n",
     "\n",
     "\n",
-    "\n",
-    "sourceDataText = PreText(text=\"Source.data\", width = 500)\n",
     "    \n",
     "\n",
     "# keep a running count of time elapsed, start at 0. This will help inform x-axis values.\n",
@@ -430,10 +428,14 @@
     "    serialData = s.readline()\n",
     "    counterData = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
     "    \n",
+    "    # accidental = N1*N2*deltaT / dwell time\n",
     "    calculatedAccidental = (counterData[0]*counterData[1]*25*(10**(-9)))/(countingTime)\n",
-    "                                                                       \n",
+    "    \n",
+    "    # adjusted = total - accidental\n",
     "    adjustedCoincidenceCounts = counterData[2] - calculatedAccidental\n",
     "    \n",
+    "    # ratio = Nc / (N1 + N2)\n",
+    "    # avoid dividing by zero\n",
     "    if counterData[0] + counterData[1] > 0:\n",
     "        ratio = adjustedCoincidenceCounts/(counterData[0] + counterData[1])\n",
     "    else:\n",
@@ -452,97 +454,74 @@
     "    # Stream the new data to the plots.\n",
     "    source.stream(new_data)\n",
     "    \n",
-    "    sourceDataString = ''\n",
     "    \n",
+    "    # Rescale y-axes as needed:\n",
     "    \n",
-    "    \n",
-    "    count = 0\n",
-    "    \n",
-    "    \n",
-    "    '''\n",
-    "    for ele in reversed(source.data['singleCountsA']):\n",
-    "      \n",
-    "        sourceDataString = sourceDataString + ' ' + str(int(ele)) \n",
-    "        \n",
-    "        if count > 4:\n",
-    "            break\n",
-    "        \n",
-    "        count = count + 1\n",
-    "    '''\n",
-    "    '''\n",
-    "    sourceDataReverse = reversed(source.data['singleCountsA'])\n",
-    "    \n",
-    "    while count < 5:\n",
-    "        \n",
-    "        sourceDataString = sourceDataString + ' ' + str(sourceDataReverse[count])\n",
-    "        \n",
-    "        count = count + 1\n",
-    "    '''\n",
-    "    \n",
+    "    # if reset y axis count is divisible by 5 with no remainder\n",
+    "    # aka do what is in the if statement once every 5 data points\n",
     "    if resetYAxisCount % 5 == 0:\n",
     "        \n",
     "        #sourceDataText.text = ' '.join(map(str, max(source.data['singleCountsA'][-5:])))\n",
     "        \n",
+    "        \n",
+    "        # find the max values of the last 5 data points\n",
     "        recentMaxA = max(source.data['singleCountsA'][-5:])\n",
+    "        recentMaxB = max(source.data['singleCountsB'][-5:])\n",
+    "        recentMaxAB = max(source.data['coincidenceCountsAB'][-5:])\n",
     "        \n",
-    "        sourceDataText.text = str(recentMaxA)\n",
     "        \n",
-    "        #singleCountsAPlot.y_range.start = -10   \n",
-    "        #singleCountsAPlot.y_range.end = recentMaxA*1.1\n",
+    "        # if the recent max value is greater than 0:\n",
+    "        if recentMaxA > 0:\n",
     "        \n",
-    "        singleCountsAPlot.y_range.update(start = -10, end = recentMaxA*1.1)\n",
+    "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
+    "            singleCountsAPlot.y_range.update(start = -recentMaxA*0.1, end = recentMaxA*1.5)\n",
     "        \n",
-    "        #if resetYAxisCount = 5:\n",
-    "         \n",
+    "        # else if recent max is 0:\n",
+    "        else:\n",
     "            \n",
-    "    if resetYAxisCount == 3:\n",
+    "            # reset y-axis to -10 to 10\n",
+    "            singleCountsAPlot.y_range.update(start = -100, end = 1000)\n",
+    "            \n",
+    "        # if the recent max value is greater than 0:\n",
+    "        if recentMaxB > 0:\n",
     "        \n",
-    "        singleCountsAPlot.y_range.update(start = -10, end = 3000)\n",
+    "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
+    "            singleCountsBPlot.y_range.update(start = -recentMaxB*0.1, end = recentMaxB*1.5)\n",
+    "        \n",
+    "        # else if recent max is 0:\n",
+    "        else:\n",
+    "            \n",
+    "            # reset y-axis to -10 to 10\n",
+    "            singleCountsBPlot.y_range.update(start = -100, end = 1000)\n",
+    "            \n",
+    "        # if the recent max value is greater than 0:\n",
+    "        if recentMaxAB > 0:\n",
+    "        \n",
+    "            # reset the y-axis scaling to show recent max plus 0.5 * recent max\n",
+    "            coincidenceCountsABPlot.y_range.update(start = -recentMaxAB*0.1, end = recentMaxAB*1.5)\n",
+    "        \n",
+    "        # else if recent max is 0:\n",
+    "        else:\n",
+    "            \n",
+    "            # reset y-axis to -10 to 10\n",
+    "            coincidenceCountsABPlot.y_range.update(start = -100, end = 1000)\n",
     "    \n",
-    "    '''\n",
-    "    if resetYAxisCount > 5:\n",
-    "        \n",
-    "        if len(source.data['singleCountsA']) > 5:\n",
-    "            \n",
-    "            recentMaxA = max(source.data['singleCountsA'][-5:])\n",
-    "        \n",
-    "            singleCountsAPlot.y_range.end = recentMaxA*1.1\n",
-    "    '''    \n",
     "    \n",
     "    # add 1 to reset y-axis counter\n",
     "    resetYAxisCount = resetYAxisCount + 1\n",
     "    \n",
     "    \n",
-    "    '''\n",
-    "    # Append the most recently received count to list n\n",
-    "    if useSerial:\n",
-    "        # Request data from the CD48 counter\n",
-    "        s.write(\"c\\n\".encode())\n",
-    "        serialData = s.readline()\n",
-    "        data = [int(x) for x in serialData.decode('ascii').rstrip().split(' ')]\n",
-    "        singleCountsA.append(data[0])\n",
-    "        singleCountsB.append(data[1])\n",
-    "        coincidenceCountsAB.append(data[2])\n",
-    "    else:\n",
-    "        # generate random numbers from 0 to dt (in miliseconds)\n",
-    "        singleCountsA.append(np.random.randint(0, countingTime))\n",
-    "        singleCountsB.append(np.random.randint(0, countingTime))\n",
-    "        coincidenceCountsAB.append(np.random.randint(0, countingTime))\n",
-    "        \n",
-    "    '''\n",
     "    \n",
-    "    \n",
-    "    # Update the average count in the text box\n",
-    "    #averageValueText[0].text = \"Plot 1 Average Counts: %d \" % (np.mean(singleCountsA))\n",
-    "    #averageValueText[1].text = \"Plot 2 Average Counts: %d \" % (np.mean(singleCountsB))\n",
-    "    #averageValueText[2].text = \"Plot 3 Average Counts: %d \" % (np.mean(coincidenceCountsAB))\n",
-    "    \n",
-    "    \n",
-    "#singleCountsAPlot.y_range.start = 0   \n",
-    "#singleCountsAPlot.y_range.end = 100\n",
     "\n",
     "\n",
-    "singleCountsAPlot.y_range = Range1d(0, 15)\n",
+    "# Set y_ranges for all three plots\n",
+    "# if you do not do this, you will not be able to alter it later\n",
+    "\n",
+    "singleCountsAPlot.y_range = Range1d(-100, 1000)\n",
+    "\n",
+    "singleCountsBPlot.y_range = Range1d(-100, 1000)\n",
+    "\n",
+    "coincidenceCountsABPlot.y_range = Range1d(-100, 1000)\n",
     "\n",
     "\n",
     "\n",
@@ -558,6 +537,10 @@
     "    \n",
     "    # if the START button is on\n",
     "    if startStopButtonGroup.active == 0:\n",
+    "        \n",
+    "        # clear the counters\n",
+    "        s.write(\"c\\n\".encode())\n",
+    "        serialData = s.readline()\n",
     "        \n",
     "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
     "        #global countingTime\n",
@@ -655,9 +638,8 @@
     "\n",
     "# create a column with our three plots\n",
     "plotsColumn1 = column([coincidenceCountsABPlot,\n",
-    "                      ratioCountsPlot,\n",
-    "                      sourceDataText\n",
-    "                     ])\n",
+    "                      ratioCountsPlot\n",
+    "                      ])\n",
     "\n",
     "plotsColumn2 = column([singleCountsAPlot, \n",
     "                       singleCountsBPlot  \n",
